[REGRESSION] Infinite loop in forms with multiple saved credentials

We should not listen to changes in the username input field while editing
its contents by using webkit_dom_html_input_element_set_editing_values()
under the risk of ending up recursively calling fill_form_cbi() forever.

Ideally WebKitGtk+ should provide a mechanism similar to
g_signal_handlers_block_by_func() to address this kind of issues. We could
surround the set_editing_values() call by a pair of
webkit_dom_event_target_remove_event_listener() and
webkit_dom_event_target_add_event_listener() but that would force us to
somehow pass the webpage to fill_form_cb, and what's worst, duplicate the
multiple credentials detection code.

https://bugzilla.gnome.org/show_bug.cgi?id=773830